add: frame tag helper

--- a/test/dummy/app/views/articles/_article.html.erb
+++ b/test/dummy/app/views/articles/_article.html.erb
@@ -1,13 +1,15 @@
-<div>
-  Article <%= "##{article.id}" %>
-  &bull;
-  <%= article.content %>
-  &bull;
-  <%= link_to "Edit",
-              edit_article_path(article) %>
-  &bull;
-  <%= button_to "Delete",
-                article_path(article),
-                method: :delete,
-                form: { style: "display: inline;" } %>
-</div>
+<%= turbo_frame_tag article do %>
+  <div>
+    Article <%= "##{article.id}" %>
+    &bull;
+    <%= article.content %>
+    &bull;
+    <%= link_to "Edit",
+                edit_article_path(article) %>
+    &bull;
+    <%= button_to "Delete",
+                  article_path(article),
+                  method: :delete,
+                  form: { style: "display: inline;" } %>
+  </div>
+<% end %>
