--- a/test/dummy/app/views/articles/new.html.erb
+++ b/test/dummy/app/views/articles/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= link_to "Back", articles_path %>
 
-<%= render "articles/form", article: @article %>
+<%= turbo_frame_tag @article do %>
+  <%= render "articles/form", article: @article %>
+<% end %>
