add: Turbo Stream Tag Builder (part 2)

--- a/test/dummy/app/views/articles/update.turbo_stream.erb
+++ b/test/dummy/app/views/articles/update.turbo_stream.erb
@@ -12,4 +12,4 @@
 <!--  </template>-->
 <!--</turbo-stream>-->
 
-<%= turbo_stream.replace @article %>
+<%= turbo_stream.replace @article, "hello wrld!" %>
