--- a/test/dummy/app/views/articles/destroy.turbo_stream.erb
+++ b/test/dummy/app/views/articles/destroy.turbo_stream.erb
@@ -1,4 +1,5 @@
-<turbo-stream target="<%= dom_id(@article) %>" action="remove">
-  <template>
-  </template>
-</turbo-stream>
+<!--<turbo-stream target="<%#= dom_id(@article) %>" action="remove">-->
+<!--  <template>-->
+<!--  </template>-->
+<!--</turbo-stream>-->
+<%= turbo_stream.remove @article %>
