--- a/test/dummy/app/views/articles/index.html.erb
+++ b/test/dummy/app/views/articles/index.html.erb
@@ -2,8 +2,7 @@
 
 <%= link_to "New article",
             new_article_path,
-            data: { turbo_frame: dom_id(Article.new) }
-%>
+            data: { turbo_frame: dom_id(Article.new) } %>
 
 <%= turbo_frame_tag Article.new %>
 
